k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: audiovault
spec:
  type: ExternalName
  externalName: audiovault.cg8mroprbpxt.eu-north-1.rds.amazonaws.com
