k8s/service-elasticache.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticache
  namespace: audiovault
spec:
  type: ExternalName
  externalName: audiovault-elasticache.grbykc.cfg.eun1.cache.amazonaws.com
