k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiovault-svc
  namespace: audiovault
spec:
  type: ClusterIP
  selector:
    app: audiovault
  ports:
    - port: 80
      targetPort: 5000
