k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiovault-ingress
  namespace: audiovault
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: audiovault-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: audiovault.jlukowicz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiovault-svc
                port:
                  number: 80
